Remove stretch for align items in cinema page for iphone fix

--- a/src/app/components/cinema/cinema.component.scss
+++ b/src/app/components/cinema/cinema.component.scss
@@ -21,10 +21,9 @@
   &__image {
     display: flex;
     justify-content: center;
-    align-items: stretch;
+    align-items: center;
 
     width: 100%;
-    // height: auto;
 
     img {
       width: 100%;
